--- a/pyproject.toml
+++ b/pyproject.toml
@@ -10,6 +10,7 @@ dependencies = [
   "pyyaml>=6.0",
   "fastapi>=0.111",
   "uvicorn[standard]>=0.30",
+  "ptyprocess>=0.7",
 ]
 
 [project.optional-dependencies]
