--- a/pyproject.toml
+++ b/pyproject.toml
@@ -11,6 +11,9 @@ dependencies = [
   "fastapi>=0.111",
   "uvicorn[standard]>=0.30",
   "ptyprocess>=0.7",
+  "python-multipart>=0.0.9",
+  "python-dotenv>=1.0",
+  "httpx>=0.27",
 ]
 
 [project.optional-dependencies]
