--- a/pyproject.toml
+++ b/pyproject.toml
@@ -27,9 +27,18 @@ classifiers = [
 [project.optional-dependencies]
 dev = [
   "black>=23.0",
+  "mypy>=1.10",
   "pytest>=7.0",
+  "ruff>=0.5.0",
+]
+telegram = [
   "httpx>=0.27",
 ]
+voice = [
+  "httpx>=0.27",
+  "python-multipart>=0.0.9",
+]
+github = []
 
 [project.scripts]
 codex-autorunner = "codex_autorunner.cli:app"
@@ -47,3 +56,20 @@ codex_autorunner = ["static/*", "static/**/*"]
 
 [tool.typer]
 completions = true
+
+[tool.ruff]
+line-length = 88
+target-version = "py39"
+
+[tool.ruff.lint]
+select = ["B", "E", "F", "I", "UP"]
+
+[tool.mypy]
+python_version = "3.9"
+warn_return_any = true
+no_implicit_optional = true
+ignore_missing_imports = true
+files = [
+  "src/codex_autorunner/core",
+  "src/codex_autorunner/integrations/app_server",
+]
