--- a/.gitignore
+++ b/.gitignore
@@ -1,30 +1,1 @@
-__pycache__/
-*.py[cod]
-*$py.class
-
-# Environments
-.env
-.venv
-venv/
-.envrc
-codex-autorunner.override.yml
-
-# Packaging
-build/
-dist/
-*.egg-info/
-
-# IDE/editor
-.idea/
-.vscode/
-.DS_Store
-
-# Pytest
-.pytest_cache/
-.coverage
-htmlcov/
-
-# Codex autorunner runtime
-.codex-autorunner/codex-autorunner.log
-.codex-autorunner/lock
-.codex-autorunner/state.json
+node_modules/
