--- a/codex-autorunner.yml
+++ b/codex-autorunner.yml
@@ -68,6 +68,54 @@ repo:
     # Bounds the agentic sync step (seconds).
     sync_agent_timeout_seconds: 1800
 
+  app_server:
+    # Command used to start the Codex app-server.
+    command:
+      - codex
+      - app-server
+    # Workspace state root (stores per-repo CODEX_HOME state).
+    state_root: ~/.codex-autorunner/workspaces
+    # Cap concurrent handles; null/<=0 disables the cap.
+    max_handles: 20
+    # Close idle app-server handles after this many seconds; null/<=0 disables pruning.
+    idle_ttl_seconds: 3600
+    # Per-turn timeout for app-server runs (seconds); null/<=0 disables.
+    turn_timeout_seconds: 7200
+    # Per-request timeout (seconds); null/<=0 uses the client default.
+    request_timeout: null
+    # Prompt limits for app-server flows (doc chat, spec ingest, autorunner).
+    prompts:
+      doc_chat:
+        max_chars: 12000
+        message_max_chars: 2000
+        target_excerpt_max_chars: 4000
+        recent_summary_max_chars: 2000
+      spec_ingest:
+        max_chars: 12000
+        message_max_chars: 2000
+        spec_excerpt_max_chars: 5000
+      autorunner:
+        max_chars: 16000
+        message_max_chars: 2000
+        todo_excerpt_max_chars: 4000
+        prev_run_max_chars: 3000
+    # Prompt limits for app-server flows (doc chat, spec ingest, autorunner).
+    prompts:
+      doc_chat:
+        max_chars: 12000
+        message_max_chars: 2000
+        target_excerpt_max_chars: 4000
+        recent_summary_max_chars: 2000
+      spec_ingest:
+        max_chars: 12000
+        message_max_chars: 2000
+        spec_excerpt_max_chars: 5000
+      autorunner:
+        max_chars: 16000
+        message_max_chars: 2000
+        todo_excerpt_max_chars: 4000
+        prev_run_max_chars: 3000
+
   server:
     # Bind host/port for the local UI/API. Use 0.0.0.0 only if you intend to expose it.
     host: 127.0.0.1
@@ -210,6 +258,22 @@ hub:
       path: .codex-autorunner/codex-autorunner-hub.log
       max_bytes: 10000000
       backup_count: 3
+
+  app_server:
+    # Command used to start the Codex app-server.
+    command:
+      - codex
+      - app-server
+    # Workspace state root (stores per-repo CODEX_HOME state).
+    state_root: ~/.codex-autorunner/workspaces
+    # Cap concurrent handles; null/<=0 disables the cap.
+    max_handles: 20
+    # Close idle app-server handles after this many seconds; null/<=0 disables pruning.
+    idle_ttl_seconds: 3600
+    # Per-turn timeout for app-server runs (seconds); null/<=0 disables.
+    turn_timeout_seconds: 7200
+    # Per-request timeout (seconds); null/<=0 uses the client default.
+    request_timeout: null
 
   telegram_bot:
     # Telegram bot integration (polling).
