Enhance doc chat UI by unifying event and history displays into a single chat stream. Update styles for improved layout and responsiveness. Adjust Makefile for Python versioning and package manager detection. Update .gitignore for better cache management. Modify tests to reflect changes in chat stream structure.

--- a/.gitignore
+++ b/.gitignore
@@ -3,3 +3,23 @@ build/
 .env
 .venv/
 src/codex_autorunner.egg-info/
+
+# Python cache
+__pycache__/
+*.py[cod]
+*$py.class
+
+# Distribution / packaging
+.Python
+dist/
+lib/
+include/
+bin/
+*.egg-info/
+.installed.cfg
+*.egg
+
+# Testing
+.pytest_cache/
+.coverage
+htmlcov/
