--- a/package.json
+++ b/package.json
@@ -9,11 +9,16 @@
   },
   "scripts": {
     "lint:js": "eslint \"src/codex_autorunner/static/**/*.js\"",
-    "typecheck": "tsc -p tsconfig.json"
+    "lint:ts": "eslint \"src/codex_autorunner/static/**/*.ts\"",
+    "lint": "eslint \"src/codex_autorunner/static/**/*.{js,ts}\"",
+    "typecheck": "tsc -p tsconfig.json",
+    "build": "tsc -p tsconfig.json"
   },
   "devDependencies": {
+    "@eslint/js": "^9.39.2",
     "eslint": "^9.39.2",
     "globals": "^15.9.0",
-    "typescript": "^5.9.3"
+    "typescript": "^5.9.3",
+    "typescript-eslint": "^8.14.0"
   }
 }
