--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,23 +1,34 @@
 {
-  "compilerOptions": {
-    "target": "ES2020",
-    "module": "ES2020",
-    "moduleResolution": "Bundler",
-    "lib": ["ES2020", "DOM"],
-    "allowJs": true,
-    "checkJs": true,
-    "noEmit": true,
-    "strict": false,
-    "skipLibCheck": true
+   "compilerOptions": {
+     "target": "ES2020",
+     "module": "ES2020",
+     "moduleResolution": "Bundler",
+     "lib": ["ES2020", "DOM"],
+     "allowJs": true,
+     "checkJs": false,
+     "strict": false,
+    "noImplicitAny": false,
+    "strictNullChecks": false,
+    "strictFunctionTypes": false,
+    "strictBindCallApply": false,
+    "strictPropertyInitialization": false,
+    "noImplicitThis": false,
+    "alwaysStrict": true,
+    "esModuleInterop": true,
+    "allowSyntheticDefaultImports": true,
+    "resolveJsonModule": true,
+     "forceConsistentCasingInFileNames": true,
+     "outDir": "src/codex_autorunner/static",
+     "skipLibCheck": true,
+    "allowUnreachableCode": false,
+    "allowUnusedLabels": false,
+    "noUnusedLocals": true,
+    "noUnusedParameters": true,
+    "noFallthroughCasesInSwitch": true
   },
   "include": [
     "src/codex_autorunner/static/types.d.ts",
-    "src/codex_autorunner/static/constants.js",
-    "src/codex_autorunner/static/env.js",
-    "src/codex_autorunner/static/bus.js",
-    "src/codex_autorunner/static/utils.js",
-    "src/codex_autorunner/static/docs*.js",
-    "src/codex_autorunner/static/docChat*.js"
+    "src/codex_autorunner/static/**/*.ts"
   ],
-  "exclude": ["node_modules", ".venv", "build"]
+  "exclude": ["node_modules", ".venv", "build", "src/codex_autorunner/static/vendor/**"]
 }
