--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -22,12 +22,18 @@ jobs:
         uses: actions/setup-node@v4
         with:
           node-version: "20"
+          cache: "pnpm"
+
+      - name: Enable pnpm
+        run: |
+          corepack enable
+          corepack prepare pnpm@9.15.4 --activate
 
       - name: Install Python deps
         run: pip install -e .[dev]
 
       - name: Install Node deps
-        run: npm ci
+        run: pnpm install --frozen-lockfile
 
       - name: Run checks
         run: ./scripts/check.sh
