--- a/pyproject.toml
+++ b/pyproject.toml
@@ -16,6 +16,7 @@ dependencies = [
   "python-multipart>=0.0.9",
   "python-dotenv>=1.0",
   "httpx>=0.27",
+  "tenacity>=8.0",
 ]
 classifiers = [
   "License :: OSI Approved :: MIT License",
