--- a/.github/workflows/agent-compatibility.yml
+++ b/.github/workflows/agent-compatibility.yml
@@ -13,18 +13,12 @@ on:
       - 'scripts/check_protocol_drift.py'
       - 'scripts/update_vendor_codex_schema.py'
       - 'scripts/update_vendor_opencode_openapi.py'
-      - 'tests/test_codex_app_server_integration.py'
-      - 'tests/test_opencode_integration.py'
+      - 'vendor/protocols/**'
 
 jobs:
   agent-compatibility:
     runs-on: ubuntu-latest
-    timeout-minutes: 60
-
-    strategy:
-      matrix:
-        agent: [codex, opencode]
-      fail-fast: false
+    timeout-minutes: 15
 
     steps:
       - name: Checkout
@@ -35,86 +29,22 @@ jobs:
         with:
           python-version: "3.11"
 
-      - name: Cache pnpm
-        uses: actions/cache@v4
-        with:
-          path: ~/.pnpm-store
-          key: ${{ runner.os }}-pnpm-${{ hashFiles('**/pnpm-lock.yaml') }}
-          restore-keys: |
-            ${{ runner.os }}-pnpm-
-
-      - name: Enable pnpm
-        run: |
-          corepack enable
-          corepack prepare pnpm@9.15.4 --activate
-
       - name: Install Python deps
         run: pip install -e .[dev]
 
-      - name: Install Node deps (cached)
-        run: pnpm install --frozen-lockfile
+      - name: Install Codex
+        run: npm install -g @openai/codex
 
-      - name: Install ${{ matrix.agent }}
-        run: |
-          if [ "${{ matrix.agent }}" = "codex" ]; then
-            echo "Installing Codex..."
-            npm install -g codex@latest
-            # Alternative: download from releases if npm unavailable
-          elif [ "${{ matrix.agent }}" = "opencode" ]; then
-            echo "Installing OpenCode..."
-            npm install -g opencode@latest
-            # Alternative: download from releases if npm unavailable
-          fi
-
-      - name: Verify ${{ matrix.agent }} installation
-        run: |
-          if [ "${{ matrix.agent }}" = "codex" ]; then
-            which codex || echo "Codex not installed, will skip Codex-specific tests"
-            codex --version
-            echo "Codex version installed: $(codex --version 2>&1)" >> $GITHUB_OUTPUT || true
-          elif [ "${{ matrix.agent }}" = "opencode" ]; then
-            which opencode || echo "OpenCode not installed, will skip OpenCode-specific tests"
-            opencode --version
-            echo "OpenCode version installed: $(opencode --version 2>&1)" >> $GITHUB_OUTPUT || true
-          fi
+      - name: Install OpenCode
+        run: npm install -g opencode-ai
 
       - name: Check protocol drift
         run: python scripts/check_protocol_drift.py
-
-      - name: Run Codex smoke tests
-        if: matrix.agent == 'codex'
-        run: |
-          # Run tier 1 smoke tests (should work without credentials)
-          if which codex > /dev/null 2>&1; then
-            python -m pytest tests/test_codex_app_server_integration.py -v -k "tier1" --tb=short
-          else
-            echo "Codex not installed, skipping smoke tests"
-          fi
-
-      - name: Run OpenCode integration tests
-        if: matrix.agent == 'opencode'
-        run: |
-          # Run OpenCode integration tests
-          if which opencode > /dev/null 2>&1; then
-            python -m pytest tests/test_opencode_integration.py -v --tb=short
-          else
-            echo "OpenCode not installed, skipping integration tests"
-          fi
-
-      - name: Upload test results
-        if: always()
-        uses: actions/upload-artifact@v4
-        with:
-          name: test-results-${{ matrix.agent }}
-          path: |
-            .pytest_cache/
-            **/pytest-*.xml
-          if-no-files-found: ignore
 
       - name: Summary
         run: |
           echo "## Agent Compatibility Check" >> $GITHUB_STEP_SUMMARY
           echo "" >> $GITHUB_STEP_SUMMARY
-          echo "- **Agent:** ${{ matrix.agent }}" >> $GITHUB_STEP_SUMMARY
           echo "- **OS:** ${{ runner.os }}" >> $GITHUB_STEP_SUMMARY
           echo "- **Python:** 3.11" >> $GITHUB_STEP_SUMMARY
+          echo "- ✅ Protocol drift check: PASSED" >> $GITHUB_STEP_SUMMARY
