feat: Configure subagents to use GLM-4.7-FlashX
Implements issue #321: Configure OpenCode subagents to use GLM-4.7-FlashX model
to avoid concurrency throttling while using full GLM-4.7 for the parent coordinator.

Changes:

Phase 1 - Configuration Support:
- Add subagent_models field to AgentConfig dataclass
- Add subagent_models parsing to _parse_agents_config()
- Add subagent_agent and subagent_model to DEFAULT_REPO_CONFIG.review
- Add subagent_models to DEFAULT_REPO_CONFIG.agents.opencode
- Add subagent_models to DEFAULT_HUB_CONFIG.agents.opencode

Phase 2 - Root Config Updates:
- Add subagent_models configuration to agents.opencode in codex-autorunner.yml
- Add subagent_agent and subagent_model to repo_defaults.review

Phase 3 - Runtime Agent Management:
- Create src/codex_autorunner/agents/opencode/agent_config.py module
- Add ensure_agent_config() function to create .opencode/agent/<id>.md files
- Add ensure_subagent_config() method to OpenCodeSupervisor
- Update build_opencode_supervisor() to accept subagent_models parameter
- Pass subagent_models from config to supervisor in engine.py, telegram/service.py, web/app.py

Phase 4 - Review Prompt Updates:
- Update REVIEW_PROMPT Phase 2 to specify "subagent" agent type
- Update REVIEW_PROMPT_SPEC_PROGRESS Phase 2 to specify "subagent" agent type

Phase 5 - Integration:
- Add call to ensure_subagent_config() before starting review in review.py

Phase 6 - Testing:
- Add tests/test_opencode_agent_config.py with comprehensive test coverage

Phase 7 - Documentation:
- Add "Subagent Model Configuration" section to AGENTS.md

--- a/codex-autorunner.yml
+++ b/codex-autorunner.yml
@@ -122,11 +122,23 @@ repo_defaults:
     backup_count: 3
 
   server_log:
-    # Path is relative to the repo root.
+    # Path is relative to repo root.
     # Example: .codex-autorunner/codex-server.log → /repo/root/.codex-autorunner/codex-server.log
     path: .codex-autorunner/codex-server.log
     max_bytes: 10000000
     backup_count: 3
+
+  review:
+    enabled: true
+    agent: opencode
+    # Model for parent coordinator agent
+    model: zai-coding-plan/glm-4.7
+    # Agent ID to use for subtasks (bucket reviews, pruning agents)
+    subagent_agent: subagent
+    # Model to use for subagents (default to model if not specified)
+    subagent_model: zai-coding-plan/glm-4.7-flashx
+    reasoning: null
+    max_wallclock_seconds: null
 
 agents:
   # Agent binaries/commands (add new agents here; do not hardcode).
@@ -134,6 +146,11 @@ agents:
     binary: codex
   opencode:
     binary: opencode
+    # Optional: map subagent agent IDs to models
+    # Example: subagent_models: { subagent: zai-coding-plan/glm-4.7-flashx }
+    # This allows different models for parent vs subagent sessions
+    subagent_models:
+      subagent: zai-coding-plan/glm-4.7-flashx
     # Optional: override the default serve command derived from binary.
     # serve_command:
     #   - /absolute/path/to/opencode
