--- a/codex-autorunner.yml
+++ b/codex-autorunner.yml
@@ -208,6 +208,10 @@ telegram_bot:
   app_server:
     # Close idle app-server handles after this many seconds; null/<=0 disables pruning.
     idle_ttl_seconds: 28800
+  # Per-agent turn timeout (seconds); null/<=0 disables for that agent.
+  agent_timeouts:
+    codex: 28800
+    opencode: 28800
   polling:
     timeout_seconds: 30
     # HTTP request timeout for getUpdates (should exceed timeout_seconds).
