--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
     "lint:js": "eslint \"src/codex_autorunner/static/**/*.js\"",
     "lint:ts": "eslint \"src/codex_autorunner/static_src/**/*.ts\"",
     "lint:html": "html-validate \"src/codex_autorunner/static/index.html\"",
-    "lint": "eslint \"src/codex_autorunner/static/**/*.js\" \"src/codex_autorunner/static_src/**/*.ts\"",
+    "lint": "eslint \"src/codex_autorunner/static_src/**/*.ts\"",
     "typecheck": "tsc -p tsconfig.json",
     "build": "tsc -p tsconfig.json && node scripts/add-static-banner.js",
     "test:dom": "node scripts/check_dom_structure.mjs"
