--- a/pyproject.toml
+++ b/pyproject.toml
@@ -108,6 +108,9 @@ ignore = ["E501"]
 "src/codex_autorunner/cli.py" = ["B008"]
 "src/codex_autorunner/routes/terminal_images.py" = ["B008"]
 "src/codex_autorunner/routes/voice.py" = ["B008"]
+"src/codex_autorunner/surfaces/cli/cli.py" = ["B008"]
+"src/codex_autorunner/surfaces/web/routes/terminal_images.py" = ["B008"]
+"src/codex_autorunner/surfaces/web/routes/voice.py" = ["B008"]
 
 [tool.mypy]
 python_version = "3.9"
