Update Makefile and package.json to streamline build process
- Introduced a new Makefile target `_inject-static-banners` to run postbuild script.
- Modified the `build` script in package.json to separate TypeScript compilation from static banner injection, now handled in `postbuild`.

--- a/package.json
+++ b/package.json
@@ -13,7 +13,8 @@
     "lint:html": "html-validate \"src/codex_autorunner/static/index.html\"",
     "lint": "eslint \"src/codex_autorunner/static_src/**/*.ts\"",
     "typecheck": "tsc -p tsconfig.json",
-    "build": "tsc -p tsconfig.json && node scripts/add-static-banner.js",
+    "build": "tsc -p tsconfig.json",
+    "postbuild": "node scripts/add-static-banner.js",
     "test:dom": "node scripts/check_dom_structure.mjs"
   },
   "devDependencies": {
