feat: gate previous ticket context injection behind config flag
- Add include_previous_ticket_context field to TicketRunConfig (default: False)
- Add include_previous_ticket_context to DEFAULT_REPO_CONFIG
- Add ticket_flow.include_previous_ticket_context config to codex-autorunner.yml
- Update ticket_flow definition to pass config to TicketRunConfig
- Only read previous ticket content when flag is True
- Truncate previous ticket content to 16KB with labeling when enabled
- Add tests for both modes (disabled and enabled)

This aligns with CAR constitution principles:
- 'Filesystem is the source of truth' - cross-ticket context now flows
  through explicit workspace docs by default
- 'Determinism over cleverness' - no hidden, accidental prompt bloat by default

Fixes #19

--- a/codex-autorunner.yml
+++ b/codex-autorunner.yml
@@ -60,6 +60,14 @@ repo_defaults:
     # Reuse app-server sessions across autorunner runs. Default is stateless.
     reuse_session: false
 
+  ticket_flow:
+    # Keep ticket_flow deterministic by default; surfaces can tighten this.
+    default_approval_decision: accept
+    # Include previous ticket content in prompts (disabled by default to keep tickets isolated).
+    # When enabled, previous ticket content is truncated to 16KB and clearly labeled.
+    # Prefer using workspace docs (active_context.md, decisions.md, spec.md) for cross-ticket context.
+    include_previous_ticket_context: false
+
   git:
     # Auto-commit after a run.
     auto_commit: false
