--- a/package.json
+++ b/package.json
@@ -15,7 +15,8 @@
     "typecheck": "tsc -p tsconfig.json",
     "build": "tsc -p tsconfig.json",
     "postbuild": "node scripts/add-static-banner.js",
-    "test:dom": "node scripts/check_dom_structure.mjs"
+    "test:dom": "node scripts/check_dom_structure.mjs",
+    "test:markdown": "node --test tests/js/markdown_render.test.js"
   },
   "devDependencies": {
     "@eslint/js": "^9.39.2",
