Add first-class `car pma` CLI
Implements full PMA CLI parity with web interface:
- car pma chat/interrupt/reset/active/agents/models
- car pma files/upload/download/delete
- JSON output mode support for all commands
- Comprehensive CLI tests

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -108,6 +108,7 @@ ignore = ["E501"]
 "src/codex_autorunner/static_assets.py" = ["F403"]
 "src/codex_autorunner/cli.py" = ["B008"]
 "src/codex_autorunner/surfaces/cli/cli.py" = ["B008"]
+"src/codex_autorunner/surfaces/cli/pma_cli.py" = ["B008"]
 "src/codex_autorunner/routes/terminal_images.py" = ["B008"]
 "src/codex_autorunner/surfaces/web/routes/terminal_images.py" = ["B008"]
 "src/codex_autorunner/routes/voice.py" = ["B008"]
