Rename workspace docs to contextspace

--- a/codex-autorunner.yml
+++ b/codex-autorunner.yml
@@ -65,7 +65,7 @@ repo_defaults:
     default_approval_decision: accept
     # Include previous ticket content in prompts (disabled by default to keep tickets isolated).
     # When enabled, previous ticket content is truncated to 16KB and clearly labeled.
-    # Prefer using workspace docs (active_context.md, decisions.md, spec.md) for cross-ticket context.
+    # Prefer using contextspace docs (active_context.md, decisions.md, spec.md) for cross-ticket context.
     include_previous_ticket_context: false
 
   git:
