Disable opencode stall timeout

--- a/codex-autorunner.yml
+++ b/codex-autorunner.yml
@@ -388,7 +388,7 @@ opencode:
   # Max characters per OpenCode message part (client-side chunking). null/<=0 disables.
   max_text_chars: 20000
   # Per-connection timeout for OpenCode stream stalls (seconds). null/<=0 disables.
-  session_stall_timeout_seconds: 60
+  session_stall_timeout_seconds: null
 
 server:
   # Bind host/port for the local UI/API. Use 0.0.0.0 only if you intend to expose it.
