Add Discord CLI scaffold and optional dependency gate

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -50,6 +50,9 @@ voice = [
   "python-multipart>=0.0.9",
 ]
 github = []
+discord = [
+  "websockets>=12",
+]
 
 [project.scripts]
 codex-autorunner = "codex_autorunner.cli:app"
